--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,15 @@ body {
   scrollbar-width: none;     /* Firefox */
 }
 
+/* animate section partenaire */
+@keyframes marquee {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
+}
+
+.animate-marquee {
+  display: flex;
+  animation: marquee 20s linear infinite;
+  width: max-content;
+}
+
